# wt

./: .gitignore  CMakeLists.txt  README.md
shared/: Callback.h  ConfigureReader.cpp  ConfigureReader.h  SimpleUdp.cpp  SimpleUdp.h  command.h  wt.json
test/: udptester.cpp
wtbrowser/: CMakeLists.txt  README.txt  cef_variables.cmake  simple_app.cc  simple_handler.cc  simple_handler.h
wtbrowser/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
wtcli/: CMakeLists.txt  main.cpp  wtcli.cpp
wtserver/: EmailMe.py  dashboard.html  wtserver.py
wtserver/static/: resume.css
wtserver/templates/: album.html  controller.html  dashboard.html  msgform.html  resume.html
